--- a/internal/web/package.json
+++ b/internal/web/package.json
@@ -14,9 +14,10 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.9",
+    "@types/node": "^22.13.9",
+    "tailwindcss": "^4.0.9",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
-    "vite-plugin-solid": "^2.11.2",
-    "tailwindcss": "^4.0.9"
+    "vite-plugin-solid": "^2.11.2"
   }
 }
